[tool.poetry]
name = "colabctl"
version = "0.2.1"
description = "Google Colaboratory background/task executioner & controller."
authors = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
validators = "^0.17.1"
undetected-chromedriver = "^3.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
